@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.9 unreleased
+
+* generate pages in stage two (fix for rails-signup-download recipe)
+
 h3. 3.0.8 July 7, 2014
 
 * allow Pundit option when no authentication is chosen (fixes #310)
